Some specific notes for Wikibase 1.44 upgrades are below:

* (T291617) Wikis that do not have either of the following (equivalent) lines in their config:
  require_once "$IP/extensions/Wikibase/repo/config/Wikibase.example.php";
  require_once "$IP/extensions/Wikibase/repo/ExampleSettings.php";
  probably need to change their config, see defaultEntityNamespaces below.

...

For a general manual to upgrade MediaWiki see:

https://www.mediawiki.org/wiki/Manual:Upgrading

=== Configuration changes for system administrators in 1.44 ===

==== New configuration ====

* (T12345) ...

==== Changed configuration ====

* (T291617) The defaultEntityNamespaces repo setting now defaults to true.
  It was previously set to true in the example settings,
  so for wikis that use the example settings, nothing changes.
  Wikis that do not use the example settings probably want to set
  $wgWBRepoSettings['defaultEntityNamespaces'] = false;
  in their LocalSettings.
* (T12345) ...

==== Removed configuration ====

* (T12345) ...

=== New user-facing features in 1.44 ===

* (T12345) ...

=== External library changes in 1.44 ===

==== New external libraries ====

* (T12345) ...

==== Changed external libraries ====

* (T12345) ...

==== Removed external libraries ====

* (T12345) ...

=== Bug fixes in 1.44 ===

* (T12345) ...

=== Action API changes in 1.44 ===

* (T12345) ...

=== REST API changes in 1.44 ===

* (T12345) ...

=== Languages updated in 1.44 ===

Wikibase supports over 300 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.
New monolingual support:

* (T12345) ...

Monolingual entries removed as they are now natively supported by MediaWiki:

* (T12345) ...

=== Breaking changes in 1.44 ===

* (T12345) ...

=== Deprecations in 1.44 ===

* (T12345) ...

=== Other changes in 1.44 ===

* (T12345) ...

== Online documentation ==

Installation instructions and FAQ